# VoiceOS

./: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  export_results.py  loop_memory.md  main.py  mic_health.py  mic_meter.py  mic_test.py  outbound_campaign.py  pyproject.toml  requirements.txt  serve_dashboard.py  serve_telephony.py  voiceos_chat.py  voiceos_lab.py  voiceos_stt.py
campaigns/: contacts.example.json  rajasthan_hindi.json  rajasthan_survey.json
docker/: Dockerfile.asterisk  Dockerfile.voiceos
docker/asterisk/: entrypoint.sh  extensions.conf  http.conf  pjsip.conf  rtp.conf
docs/: LOCAL.md  RESEARCH-speech-to-transcript.md  TELEPHONY.md
pages/: 1_Live_transcript.py
tests/: test_audiosocket.py  test_backchannel.py  test_call_records.py  test_campaign.py  test_conversation_commit.py  test_dashboard.py  test_dashboard_logs.py  test_detector.py  test_echo_gate.py  test_endpoint.py  test_events.py  test_fallback.py  test_history.py  test_llm_errors.py  test_llm_fallback.py  test_metrics.py  test_metrics_collector.py  test_originate.py  test_outbound_campaign.py  test_piper.py  test_playback_commit.py  test_predictive_endpoint.py  test_session.py  test_streaming_text.py  test_streaming_vad.py  test_survey.py  test_telephony_bridge.py  test_tools.py  test_transcode.py  test_websocket.py  test_whisper_options.py
voiceos/: __init__.py
voiceos/audio/: __init__.py  audio_queue.py  microphone.py  player.py  recorder.py  speaker.py
voiceos/config/: __init__.py  models.py  (+1 more)
(+85 files in other folders)
